--- a/test.html
+++ b/test.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TEST</title>
-</head>
-<body>
+    <style>
+      #jeTest {
+        width: 80%;
+        height: 4px;
+        background-color: green;
+      }
+    </style>
+  </head>
+  <body>
     <h1>TEST</h1>
-    <button id="test">TEST</button>    
-</body>
-<script>
-    document.querySelector('#test').addEventListener('click', () => {
-        console.log('clicked');
-    })
-</script>
+    <button id="test">TEST</button>
+
+    <hr id="jeTest" />
+  </body>
+  <script>
+    document.querySelector("#test").addEventListener("click", () => {
+      console.log("clicked");
+    });
+  </script>
 </html>
